SET_SOURCE_FILES_PROPERTIES(
  ${PROJECT_SOURCE_DIR}/assets/models.o
  PROPERTIES
  EXTERNAL_OBJECT true
  GENERATED true
  )

SET_SOURCE_FILES_PROPERTIES(
  ${PROJECT_SOURCE_DIR}/assets/textures.o
  PROPERTIES
  EXTERNAL_OBJECT true
  GENERATED true
  )

SET_SOURCE_FILES_PROPERTIES(
  ${PROJECT_SOURCE_DIR}/assets/shaders.o
  PROPERTIES
  EXTERNAL_OBJECT true
  GENERATED true
  )

ADD_LIBRARY(assets
	STATIC
	${PROJECT_SOURCE_DIR}/assets/models.o
	${PROJECT_SOURCE_DIR}/assets/shaders.o
	${PROJECT_SOURCE_DIR}/assets/textures.o
)

SET_TARGET_PROPERTIES(assets
PROPERTIES
LINKER_LANGUAGE C
)

ADD_DEPENDENCIES(assets shaders textures models)

ADD_SUBDIRECTORY(models)
ADD_SUBDIRECTORY(textures)
ADD_SUBDIRECTORY(shaders)

