SET(LATEX_OUTPUT_PATH ${PROJECT_BINARY_DIR})
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

FIND_PACKAGE(LATEX) # 

if(LATEX_COMPILER)
	SET(LATEX_FOUND TRUE)
else ()
	SET(LATEX_FOUND FALSE)
endif()

IF(LATEX_FOUND)
	INCLUDE(cmake/UseLATEX.cmake)
	ADD_LATEX_DOCUMENT(
		Dossier.tex
		DEFAULT_PDF
		)

	ADD_CUSTOM_TARGET (docs
		WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
		COMMAND rm *.log *.out *.toc *.aux &> /dev/null || true
		DEPENDS pdf
		)
ENDIF()
