LINK_DIRECTORIES (
	${CMAKE_SOURCE_DIRECTORY}
	)

INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR})

ADD_EXECUTABLE ( ${PROJECT_NAME}
	GLWindow.cpp
	Application.cpp
	main.cpp
	)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     ${GLFW_LIBRARIES}
     ${GL_LIBRARIES}
	)

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
