LINK_DIRECTORIES (
	${CMAKE_SOURCE_DIRECTORY}
	)

INCLUDE_DIRECTORIES (
	${PROJECT_BINARY_DIR}/include
	)

SET_SOURCE_FILES_PROPERTIES(${PROJECT_BINARY_DIR}/assets.cpp PROPERTIES GENERATED 1)

ADD_EXECUTABLE ( ${PROJECT_NAME}
	${PROJECT_BINARY_DIR}/assets.cpp
	GLWindow.cpp
	Application.cpp
	Model.cpp
	Scene.cpp
	Camera.cpp
	Shader.cpp
	Mesh.cpp
	utils/OBJData.cpp
	main.cpp
	)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     ${GLFW_LIBRARIES}
     ${GL_LIBRARIES}
     ${GLEW_LIBRARIES}
	)

ADD_DEPENDENCIES(opengl-demo assets)


INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
